# linuxtag_2022

./: README.md  check.sh  run_venv.sh
linuxtag/: .gitignore  pyproject.toml  reinstall.sh  setup.py  type_check.sh
linuxtag/linuxtag/: __main__.py  functions.py
scripts/: args.py  basics.py  contextmanagers.py  decorators.py  easy_args.py  files.py  mocking.py  more_args.py  plot_sth.py  table.xlsx  test_mocking.py  write_excel.py
