[build-system]
# https://github.com/pypa/setuptools_scm/
requires = ["setuptools>=61.0", "setuptools_scm"]
build-backend = "setuptools.build_meta"

[project]
name = "linuxtag"
description = "Demo project for Linuxtag 2022"
dependencies = ["importlib-metadata"]
dynamic = ["version"] # determine version from git tag

[tool.setuptools_scm]
root = ".." # relative path to git root
local_scheme = "no-local-version"
version_scheme = "post-release"

[project.scripts]
linuxtag = "linuxtag.__main__:main"
